--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -16,7 +16,7 @@ body {
 /* Heading */
 h1, h2, h3, h4, h5, h6 {
     font-family: $mainFont;
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
     //line-height: 1rem;
     letter-spacing: -.04rem;
@@ -32,7 +32,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1.6rem;
+    font-size: 1rem;
 }
 
 h4 {
@@ -48,7 +48,7 @@ h6 {
 }
 
 p {
-    letter-spacing: .1rem;
+    letter-spacing: 0;
 }
 
 a,
