Finalização do hotsite

--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,6 +1,6 @@
 /* Header */
 header {
-  .container {
+  .container-fluid {
     z-index: 999;
     background-color: $mainColor;
     height: 64px;
