--- a/assets/sass/_body.scss
+++ b/assets/sass/_body.scss
@@ -93,7 +93,7 @@ body {
   main {
     .banner {
       padding: 0;
-      background: #000 url('../images/banner/banner-header.jpg') -240px -5px no-repeat;
+      background: url('../images/banner/banner-header.jpg') -240px -5px no-repeat;
       background-size: 200%;
 
       .banner-text {
